# ADVobfuscator

./: .gitignore  ADVobfuscator.sln  ADVobfuscator.vcxproj  ADVobfuscator.vcxproj.filters  CHANGELOG.txt  CMakeLists.txt  CompileWithGcc.sh  LICENSE  README.md
ADVobfuscator/: .gitignore  ADVobfuscator.1  DetectDebugger.h  Indexes.h  Inline.h  Log.h  Makefile  MetaFSM.h  MetaFactorial.h  MetaFibonacci.h  MetaRandom.h  MetaString1.h  MetaString2.h  MetaString3.h  MetaString4.h  ObfuscatedCall.h  ObfuscatedCallWithPredicate.h  Unroller.h  main.cpp
ADVobfuscator.xcodeproj/: project.pbxproj
ADVobfuscator.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ADVobfuscator.xcodeproj/project.xcworkspace/xcshareddata/: ADVobfuscator.xccheckout
ADVobfuscator.xcodeproj/project.xcworkspace/xcuserdata/sebastien.xcuserdatad/: UserInterfaceState.xcuserstate
ADVobfuscator.xcodeproj/xcuserdata/sebastien.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ADVobfuscator.xcodeproj/xcuserdata/sebastien.xcuserdatad/xcschemes/: ADVobfuscator.xcscheme  xcschememanagement.plist
Examples/: CMakeLists.txt  Examples.vcxproj  Examples.vcxproj.filters
Examples/DetectDebugger/: DetectDebugger.vcxproj  DetectDebugger.vcxproj.filters  Example  Makefile
Examples/ObfuscatedCalls/: Example  Makefile  ObfuscatedCalls.vcxproj
Examples/ObfuscatedStrings/: Example  ObfuscatedStrings.vcxproj  main.cpp
Examples/demo/: demo  demo.cpp  guessme.cpp  guessme_aes.cpp
Examples/example/: describe.h  hexdump.h  main.cpp
Lib/: Log.h  MetaString.h
cmake/: AdvobfuscatorConfig.cmake.in
docs/: ADVobfuscator.typ  citations.bib  how.html  how.md  index.html  index.md  installation.html  installation.md  obfuscation.html  obfuscation.md  reverse-engineering.html  reverse-engineering.md
include/advobfuscator/: aes.h  aes_string.h  bytes.h  call.h  format.h  fsm.h  obf.h  random.h  string.h
tests/: CMakeLists.txt  Tests.vcxproj  main.cpp
